syntax = "proto3";

option csharp_namespace = "Raga.Game";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
  string player_id = 1;
  string message = 2;
}

message SendMessageResponse {
  bool success = 1;
  string message = 2;
}

message GetMessagesRequest {
  string chat_id = 1;
  int32 page_number = 2;
  int32 page_size = 3;
}

message GetMessagesResponse {
  repeated ChatMessage messages = 1;
  int32 total_count = 2;
}

message ChatMessage {
  string player_id = 1;
  string message = 2;
  string timestamp = 3;
}
